deploy/judge-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: judge-api
  namespace: kube-hello-kiali
  labels:
    app: judge-api
spec:
  selector:
    app: judge-api
  ports:
    - name: http
      port: 8081
      targetPort: 8081
