deploy/judge-api/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: judge-api
  namespace: rps
spec:
  host: judge-api
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
