deploy/judge-api/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: judge-api
  namespace: rps
spec:
  hosts:
    - judge-api
  http:
    - route:
        - destination:
            host: judge-api
            port:
              number: 8081
